# llm-safe-pl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: throughput.py
docs/: detectors.md  errors.md  limitations.md  llm_workflow.md  quickstart.md
examples/: anthropic_integration.py  basic.py  cli_usage.md  hardening.py  openai_integration.py
notebooks/: quickstart.ipynb
src/llm_safe_pl/: __init__.py  __main__.py  anonymizer.py  cli.py  deanonymizer.py  errors.py  models.py  shield.py  strategies.py
src/llm_safe_pl/detectors/: __init__.py  base.py  credit_card.py  email.py  iban.py  id_card.py  nip.py  passport.py  pesel.py  phone.py  regon.py
src/llm_safe_pl/validators/: __init__.py  checksum.py  iban.py  luhn.py
tests/: test_anonymizer.py  test_cli.py  test_cli_commands.py  test_corpus.py  test_deanonymizer.py  test_deprecation.py  test_errors.py  test_models.py  test_overlap_property.py  test_public_api.py  test_roundtrip_property.py  test_security_hardening.py  test_shield.py  test_strategies.py
tests/corpora/pl_pii_negative/: sample01_office_text.txt  sample02_short_codes.txt
tests/corpora/pl_pii_positive/: sample01_pesel_simple.json  sample01_pesel_simple.txt  sample02_email_polish.json  sample02_email_polish.txt  sample03_iban.json  sample03_iban.txt
tests/test_detectors/: test_base.py  test_credit_card.py  test_email.py  test_iban.py  test_id_card.py  test_nip.py  test_passport.py  test_pesel.py  test_phone.py  test_registry.py  test_regon.py
tests/test_validators/: test_checksum.py  test_iban.py  test_luhn.py
